tests/ui/booleans.stderr
error: this boolean expression contains a logic bug
  --> $DIR/booleans.rs:12:13
   |
12 |     let _ = a && b || a;
   |             ^^^^^^^^^^^ help: it would look like the following `a`
   |
note: lint level defined here
  --> $DIR/booleans.rs:3:26
   |
3  | #![deny(nonminimal_bool, logic_bug)]
   |                          ^^^^^^^^^
help: this expression can be optimized out by applying boolean operations to the outer expression
  --> $DIR/booleans.rs:12:18
   |
12 |     let _ = a && b || a;
   |                  ^

error: this boolean expression can be simplified
  --> $DIR/booleans.rs:14:13
   |
14 |     let _ = !true;
   |             ^^^^^ help: try `false`
   |
note: lint level defined here
  --> $DIR/booleans.rs:3:9
   |
3  | #![deny(nonminimal_bool, logic_bug)]
   |         ^^^^^^^^^^^^^^^

error: this boolean expression can be simplified
  --> $DIR/booleans.rs:15:13
   |
15 |     let _ = !false;
   |             ^^^^^^ help: try `true`

error: this boolean expression can be simplified
  --> $DIR/booleans.rs:16:13
   |
16 |     let _ = !!a;
   |             ^^^ help: try `a`

error: this boolean expression contains a logic bug
  --> $DIR/booleans.rs:17:13
   |
17 |     let _ = false && a;
   |             ^^^^^^^^^^ help: it would look like the following `false`
   |
help: this expression can be optimized out by applying boolean operations to the outer expression
  --> $DIR/booleans.rs:17:22
   |
17 |     let _ = false && a;
   |                      ^

error: this boolean expression can be simplified
  --> $DIR/booleans.rs:18:13
   |
18 |     let _ = false || a;
   |             ^^^^^^^^^^ help: try `a`

error: this boolean expression can be simplified
  --> $DIR/booleans.rs:23:13
   |
23 |     let _ = !(!a && b);
   |             ^^^^^^^^^^ help: try `!b || a`

error: this boolean expression contains a logic bug
  --> $DIR/booleans.rs:33:13
   |
33 |     let _ = a == b && a != b;
   |             ^^^^^^^^^^^^^^^^ help: it would look like the following `false`
   |
help: this expression can be optimized out by applying boolean operations to the outer expression
  --> $DIR/booleans.rs:33:13
   |
33 |     let _ = a == b && a != b;
   |             ^^^^^^

error: this boolean expression can be simplified
  --> $DIR/booleans.rs:34:13
   |
34 |     let _ = a == b && c == 5 && a == b;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: try `a == b && c == 5`

error: this boolean expression can be simplified
  --> $DIR/booleans.rs:35:13
   |
35 |     let _ = a == b && c == 5 && b == a;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: try `a == b && c == 5`

error: this boolean expression contains a logic bug
  --> $DIR/booleans.rs:36:13
   |
36 |     let _ = a < b && a >= b;
   |             ^^^^^^^^^^^^^^^ help: it would look like the following `false`
   |
help: this expression can be optimized out by applying boolean operations to the outer expression
  --> $DIR/booleans.rs:36:13
   |
36 |     let _ = a < b && a >= b;
   |             ^^^^^

error: this boolean expression contains a logic bug
  --> $DIR/booleans.rs:37:13
   |
37 |     let _ = a > b && a <= b;
   |             ^^^^^^^^^^^^^^^ help: it would look like the following `false`
   |
help: this expression can be optimized out by applying boolean operations to the outer expression
  --> $DIR/booleans.rs:37:13
   |
37 |     let _ = a > b && a <= b;
   |             ^^^^^

error: this boolean expression can be simplified
  --> $DIR/booleans.rs:39:13
   |
39 |     let _ = a != b || !(a != b || c == d);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: try `c != d || a != b`

error: aborting due to 13 previous errors

